Add modularization to FSST